account creation changes

--- a/templates/kla_connect_profiles/email/verification_email_template.html
+++ b/templates/kla_connect_profiles/email/verification_email_template.html
@@ -25,6 +25,12 @@
             <button type="submit">
                <a href="{{verification_url}}?email={{email}}&amp;verification_code={{code}}">Verify</a> 
             </button>
+            <p>
+                if the above does not work copy and paste the url below in your browser
+            </p>
+            <p>
+                {{verification_url}}?email={{email}}&amp;verification_code={{code}}
+            </p>
         </div>
     </body>
 </html>
